--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-
+<body>
   <!-- Rating state start -->
+<div class="container">
+  <div class="card">
+    <img class="image" src="./images/icon-star.svg" alt="star">
+    <h1 class="title">How did we do?</h1>
+    <p class="description">Please let us know how we did with your support request. All feedback is appreciated 
+  to help us improve our offering!</p>
+  <div class="buttons">
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
 
-  How did we do?
+  </div>
+  <button class="submit">Submit</button>
+  </div>
+</div>
+  
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+  
 
   1 2 3 4 5
 
@@ -34,9 +50,5 @@
   <!-- Thank you state end -->
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
