--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           </div>
           <button id="submit" class="submit">Submit</button>
         </div>
-      </div>
-      <div id="output" class="output">
-        <img src="./images/illustration-thank-you.svg" />
-        <h3>You selected 4 out of 5</h3>
-        <h1 class="title">Thank you!</h1>
-        <p class="output-desc">
-          We appreciate you taking the time to give a rating. If you ever need
-          more support, don’t hesitate to get in touch!
-        </p>
+        <div id="output" class="output inactive">
+          <img src="./images/illustration-thank-you.svg" />
+          <h3>You selected 4 out of 5</h3>
+          <h1 class="title">Thank you!</h1>
+          <p class="output-desc">
+            We appreciate you taking the time to give a rating. If you ever need
+            more support, don’t hesitate to get in touch!
+          </p>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
