--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             Please let us know how we did with your support request. All
             feedback is appreciated to help us improve our offering!
           </p>
-          <div class="buttons">
-            <button class="one" id="btn1">1</button>
-            <button class="two">2</button>
-            <button class="three">3</button>
-            <button class="four">4</button>
-            <button class="five">5</button>
+          <div class="buttons" id="buttons">
+            <button class="one" id="btn1" value="1">1</button>
+            <button class="two" id="btn1" value="2">2</button>
+            <button class="three" id="btn1" value="3">3</button>
+            <button class="four" id="btn1" value="4">4</button>
+            <button class="five" id="btn1" value="5">5</button>
           </div>
           <button id="submit" class="submit">Submit</button>
         </div>
         <div id="output" class="output inactive">
           <img src="./images/illustration-thank-you.svg" />
-          <h3>You selected 4 out of 5</h3>
+          <h3>You selected <span id="rate">0</span> out of 5</h3>
           <h1 class="title">Thank you!</h1>
           <p class="output-desc">
             We appreciate you taking the time to give a rating. If you ever need
